--- a/style/style.css
+++ b/style/style.css
@@ -80,22 +80,29 @@ main {
 
 footer {
   background-color: #ff5600;
-  height: 2rem;
-  justify-content: space-around;
-  display: flex;
-  align-items: center;
   width: 100%;
+  padding: 1rem 0;
+  display: flex;
+  justify-content: center; /* centra horizontalmente el contenido */
+  align-items: center;
 }
 
 footer ul {
   list-style: none;
   display: flex;
+  gap: 2rem;
+  padding: 0;
+  margin: 0;
 }
 
-footer ul a img {
-  margin-left: 1rem;
-  width: 1.5rem;
-  height: 1.5rem;
+footer ul li a img {
+  width: 2rem;
+  height: 2rem;
+  transition: transform 0.3s ease;
+}
+
+footer ul li a img:hover {
+  transform: scale(1.2);
 }
 
 /*PAGE INICIO*/
