Realice la seccion de contacto y ajuste algunos detalles

--- a/style/Sass/main.scss
+++ b/style/Sass/main.scss
@@ -7,6 +7,9 @@
 /*ESTILOS INPUTS*/
 @use "./components/inputs";
 
+/*FORM*/
+@use "./layout/forms";
+
 /*FONDO PAGINA*/
 @use "./layout/_background.scss";
 
@@ -27,3 +30,6 @@
 
 /*PEDIDOS*/
 @use "./pages/pedi";
+
+/*CONTACTO*/
+@use "./pages/contacto";
