--- a/style/Sass/pages/_pedi.scss
+++ b/style/Sass/pages/_pedi.scss
@@ -57,5 +57,8 @@ main {
                 box-shadow: $shadow-base;
             }
         }
+        input::placeholder{
+        color: $color-terciario;
+      }
     }
 }
