--- a/style/style.css
+++ b/style/style.css
@@ -94,6 +94,80 @@ input[type=submit] {
   }
 }
 
+/*FORM*/
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 1.5rem;
+  color: #eee2d7;
+  font-family: "Roboto", serif;
+}
+@media (max-width: 768px) {
+  form {
+    padding: 1rem;
+  }
+}
+@media (max-width: 576px) {
+  form {
+    padding: 0.5rem;
+  }
+}
+form input,
+form textarea {
+  margin-bottom: 1rem;
+  font-size: 1.3rem;
+}
+@media (max-width: 768px) {
+  form input,
+  form textarea {
+    font-size: 1.1rem;
+  }
+}
+@media (max-width: 576px) {
+  form input,
+  form textarea {
+    font-size: 0.9rem;
+  }
+}
+form input[type=submit] {
+  background-color: #000ebe;
+  color: #eee2d7;
+  border: none;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 0.8rem;
+  margin: 0 auto;
+  transition: background-color 0.3s ease;
+}
+@media (min-width: 768px) {
+  form input[type=submit] {
+    font-size: 0.9rem;
+  }
+}
+@media (min-width: 992px) {
+  form input[type=submit] {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  form input[type=submit] {
+    font-size: 1.1rem;
+  }
+}
+form input[type=submit]:hover {
+  background-color: rgb(0, 10.2421052632, 139);
+}
+form input::placeholder,
+form textarea::placeholder {
+  color: #eee2d7;
+}
+
 /*FONDO PAGINA*/
 body {
   background-image: linear-gradient(to bottom, #000ebe, rgba(255, 86, 0, 0) 200%), url(../img/restaurant-interior.jpg);
@@ -12239,6 +12313,31 @@ main div section img {
   margin-bottom: 5px;
   margin-top: 5px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+main div input::placeholder {
+  color: #eee2d7;
+}
+
+/*CONTACTO*/
+#main-contact p {
+  color: #eee2d7;
+  font-family: "Roboto", serif;
+  font-size: 0.9rem;
+}
+@media (min-width: 768px) {
+  #main-contact p {
+    font-size: 1.1rem;
+  }
+}
+@media (min-width: 992px) {
+  #main-contact p {
+    font-size: 1.3rem;
+  }
+}
+@media (min-width: 1200px) {
+  #main-contact p {
+    font-size: 1.5rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
