Agregue boton enviar en reservas

--- a/style/Sass/pages/_reserva.scss
+++ b/style/Sass/pages/_reserva.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     color: $color-terciario;
 
+    button {
+      margin-bottom: 20px;
+      border-radius: 0.3rem;
+    }
     p {
         font-family: $font-destacada;
         font-size: $font-size-base;
@@ -19,42 +23,6 @@
         a {
             color: $color-primario;
         }
-
-        button {
-            margin-bottom: $espaciado-s;
-            background-color: $color-primario;
-            border-radius: 0.3rem;
-            color: $color-terciario;
-            border: none;
-            padding: 0.5rem;
-            font-size: 0.8rem;
-            cursor: pointer;
-            box-shadow: $shadow-base;
-            padding: $espaciado-s $espaciado-s;
-
-            &:hover {
-              background-color: lighten($color-primario, 5%);
-            }
-          
-            @media (min-width: $breakpoint-md) {
-              font-size: 0.9rem;
-            }
-          
-            @media (min-width: $breakpoint-lg) {
-              font-size: 1rem;
-            }
-          
-            @media (min-width: $breakpoint-xl) {
-              font-size: 1.1rem;
-            }
-        }
-    }
-
-    .fecha-reserva {
-    }
-
-    .hora-reserva {
-
     }
 
     .nota-reserva {
@@ -72,5 +40,10 @@
 
     label{
       margin-bottom: 0.5rem;
+    }
+
+    input[type="submit"]{
+      max-width: 10%;
+      margin-top: 20px;
     }
 }
