--- a/style/Sass/main.scss
+++ b/style/Sass/main.scss
@@ -10,6 +10,9 @@
 /*FORM*/
 @use "./layout/forms";
 
+/*BOTON*/
+@use "./components/buttons";
+
 /*FONDO PAGINA*/
 @use "./layout/_background.scss";
 
