Reallice las correspondientes mejoras de CEO para la entrega final

--- a/style/Sass/pages/_menu.scss
+++ b/style/Sass/pages/_menu.scss
@@ -1,5 +1,11 @@
 @use "../abstracts/variables"as *;
 
+.menu-section {
+  
+  h1{
+    color: $color-primario;
+  }
+}
 .carta {
     display: grid;
     grid-template-columns: 1fr;
